<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="#FFFFFF"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints"
        app:title="Nouvelle réunion"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subject_text_input"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meetingSubject"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/red_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_box_white"
        android:backgroundTint="@color/MeetingRed"
        android:forceDarkAllowed="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_textView" />

    <Button
        android:id="@+id/orange_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_box_white"
        android:backgroundTint="@color/MeetingOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_textView" />

    <Button
        android:id="@+id/yellow_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_box_white"
        android:backgroundTint="@color/MeetingYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_textView" />

    <Button
        android:id="@+id/green_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_box_white"
        android:backgroundTint="@color/MeetingGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_button" />

    <Button
        android:id="@+id/blue_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_box_white"
        android:backgroundTint="@color/MeetingBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orange_button" />

    <Button
        android:id="@+id/purple_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_box_white"
        android:backgroundTint="@color/MeetingPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow_button" />

    <TextView
        android:id="@+id/color_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/colorTextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_time_picker_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/participants_rv"
        android:layout_width="423dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_spinner" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
        android:ems="10"
        android:hint="@string/participant_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/add_email_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants_rv" />

    <ImageButton
        android:id="@+id/add_email_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_add_box"
        android:backgroundTint="@color/grayOut"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants_rv"
        android:contentDescription="@string/add_email"/>

    <Button
        android:id="@+id/date_time_picker_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/meetingLocations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_text_input" />


</androidx.constraintlayout.widget.ConstraintLayout>